--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/lilhoe/Desktop/usc/526 Game console/VirusGame_Prototype/build;/Users/yingsun/Documents/UnityProject/526/group;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/saiku/OneDrive/Desktop/Unity Projects/group project build files;/Users/yingsun/Documents/UnityProject/526/group;;;;;;;;\"}"
             }
         ]
     }
