--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -4,7 +4,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/anisha/Desktop/Virus_Build_Beta_Protoype;/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;;;;\"}"
             }
         ]
     }
