--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -4,7 +4,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/yingsun/Documents/UnityProject/Build/BuildBeta;/Users/lilhoe/Desktop/usc/526 Game console/VirusGame_Prototype/build;/Users/anisha/Desktop/Virus_Build_Beta_Protoype;/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/saiku/OneDrive/Desktop/Unity Projects/group project build files;/Users/yingsun/Documents/UnityProject/Build/BuildBeta;/Users/lilhoe/Desktop/usc/526 Game console/VirusGame_Prototype/build;/Users/anisha/Desktop/Virus_Build_Beta_Protoype;/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -14,6 +14,11 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "autoPublish",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "createDefaultBuildsFolder",
                 "value": "{\"m_Value\":true}"
             }
         ]
