--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -1,10 +1,12 @@
 {
+    "m_Name": "Settings",
+    "m_Path": "ProjectSettings/Packages/com.unity.connect.share/Settings.json",
     "m_Dictionary": {
         "m_DictionaryValues": [
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/yingsun/Documents/UnityProject/Build/BuildBeta;/Users/lilhoe/Desktop/usc/526 Game console/VirusGame_Prototype/build;/Users/anisha/Desktop/Virus_Build_Beta_Protoype;/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/lilhoe/Desktop/usc/526 Game console/VirusGame_Prototype/build;/Users/anisha/Desktop/Virus_Build_Beta_Protoype;/Users/bhavyasethi/Desktop/VirusPrototype Build;;;;;;;\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
